# DashboardTrading

./: .gga  .gitignore  Makefile  README.md
backend/: =1.26.0  AGENTS.md  alembic.ini  pyproject.toml
backend/.openclaw/skills/sdd-verify/: SKILL.md
backend/alembic/: env.py
backend/alembic/versions/: 2e3b2ebec6d5_create_account_asset_trade_tables.py  484cf4edb40f_create_catalog_tables.py  93fa025b4e22_create_psychology_review_trading_.py  95da0ec91fc5_seed_catalog_tables.py  970bf55b0d74_create_strategy_cluster_tables.py  a1b2c3d4e5f6_create_strategy_lab_tables.py  e0843debd49b_seed_psychology_tables.py  ebc4b9c1a9a0_add_broker_ticket_to_trades.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/api/: __init__.py  health.py
backend/app/core/: exceptions.py
backend/app/db/: dependencies.py  unit_of_work.py
backend/app/models/: __init__.py  account.py  asset.py  base.py  catalogs.py  mistake.py  psychology.py  review.py  risk_profile.py  strategy.py  strategy_lab.py  tag.py  trade.py  trading_session.py
backend/app/modules/: __init__.py
backend/app/modules/accounts/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/ai_insights/: __init__.py  dependencies.py  (+3 more)
backend/data/: v0.3.0-schema.sql
backend/docs/: technical-debt-application-layer.md
backend/scripts/: test_alembic_clean.sh
backend/tests/: __init__.py  conftest.py  test_domain_integrity.py  test_foundation_di.py  test_health.py  test_migration_broker_ticket.py  test_smoke.py
backend/tests/modules/: __init__.py
(+394 files in other folders)
